SO-2178: fix it-test launch configurations